--- a/notebook/1_2_numpy.ipynb
+++ b/notebook/1_2_numpy.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "executionInfo": {
      "elapsed": 8,
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -68,7 +68,7 @@
        "       [ 8,  9, 10, 11]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,12 +81,72 @@
     "    [8, 9, 10, 11]\n",
     "]\n",
     "\n",
-    "np.array(data)"
+    "arr = np.array(data)\n",
+    "\n",
+    "arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 251,
+     "status": "ok",
+     "timestamp": 1718432208853,
+     "user": {
+      "displayName": "毛利拓也",
+      "userId": "17854120745961292401"
+     },
+     "user_tz": -540
+    },
+    "id": "4FQmak-WiU2v",
+    "outputId": "271ec5ed-afcc-41f7-e6ee-cd445f8ac220"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3],\n",
+       "       [ 4,  5,  6,  7],\n",
+       "       [ 8,  9, 10, 11]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -111,7 +171,7 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -149,20 +209,20 @@
        "       [ 8,  9, 10, 11]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = np.arange(12).reshape(3, 4)\n",
+    "arr = np.arange(12).reshape(3, 4)\n",
     "\n",
-    "data"
+    "arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -187,18 +247,18 @@
        "(3, 4)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.shape"
+    "arr.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -223,49 +283,13 @@
        "2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.ndim"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 251,
-     "status": "ok",
-     "timestamp": 1718432208853,
-     "user": {
-      "displayName": "毛利拓也",
-      "userId": "17854120745961292401"
-     },
-     "user_tz": -540
-    },
-    "id": "4FQmak-WiU2v",
-    "outputId": "271ec5ed-afcc-41f7-e6ee-cd445f8ac220"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(data)"
+    "arr.ndim"
    ]
   },
   {
@@ -288,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -299,18 +323,18 @@
        "       [ 8,  9, 10, 11]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -335,18 +359,18 @@
        "array([0, 1, 2, 3])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[0]"
+    "arr[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -371,18 +395,18 @@
        "1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[0][1]"
+    "arr[0][1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -407,18 +431,18 @@
        "1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[0, 1]"
+    "arr[0, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -448,7 +472,7 @@
     }
    ],
    "source": [
-    "for row in data:\n",
+    "for row in arr:\n",
     "  print(row)"
    ]
   },
@@ -472,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -483,18 +507,18 @@
        "       [ 8,  9, 10, 11]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -519,18 +543,18 @@
        "(3, 4)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.shape"
+    "arr.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -555,21 +579,21 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 2次元を1次元に変更\n",
-    "data = data.flatten()\n",
+    "arr = arr.flatten()\n",
     "\n",
-    "data"
+    "arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -595,19 +619,19 @@
        "        True,  True,  True])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# ブーリアンのフィルター\n",
-    "data > 3"
+    "arr > 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -632,19 +656,19 @@
        "array([ 4,  5,  6,  7,  8,  9, 10, 11])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# ブーリアンがTrueの要素だけ抽出（ブーリアンのフィルター）\n",
-    "data[data > 3]"
+    "arr[arr> 3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -669,18 +693,18 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -705,18 +729,18 @@
        "(12,)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.shape"
+    "arr.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -752,14 +776,14 @@
        "       [11]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# 1次元を2次元に変更\n",
-    "data[:, np.newaxis]"
+    "arr[:, np.newaxis]"
    ]
   },
   {
@@ -780,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -793,7 +817,7 @@
        "       5.2, 5.3, 5.4, 5.5, 5.6, 5.7, 5.8, 5.9])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +850,7 @@
        "       -0.70554033, -0.63126664, -0.55068554, -0.46460218, -0.37387666])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
