--- a/notebook/1_4_scikit-learn.ipynb
+++ b/notebook/1_4_scikit-learn.ipynb
@@ -113,7 +113,7 @@
    },
    "outputs": [],
    "source": [
-    "# # リストをpandasに変換\n",
+    "# # listをpandasに変換\n",
     "# X = pd.DataFrame(X)\n",
     "# y = pd.Series(y)\n",
     "# display(X)\n",
@@ -138,7 +138,7 @@
    },
    "outputs": [],
    "source": [
-    "# # リストをNumPyに変換\n",
+    "# # listをNumPyに変換\n",
     "# X = np.array(X)\n",
     "# y = np.array(y)"
    ]
@@ -265,7 +265,7 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(8,4)) #プロットのサイズ指定\n",
+    "plt.figure(figsize=(8, 4)) #プロットのサイズ指定\n",
     "\n",
     "# モデルのプロット\n",
     "y_pred = model.predict(X)\n",
