--- a/notebook/1_1_pandas.ipynb
+++ b/notebook/1_1_pandas.ipynb
@@ -147,6 +147,63 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 203
+    },
+    "executionInfo": {
+     "elapsed": 1288,
+     "status": "ok",
+     "timestamp": 1718431672117,
+     "user": {
+      "displayName": "毛利拓也",
+      "userId": "17854120745961292401"
+     },
+     "user_tz": -540
+    },
+    "id": "odsPTOTWglDQ",
+    "outputId": "293460a4-42ca-4722-a2d4-4df3f9cc0793"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -171,7 +228,7 @@
        "Index(['a', 'b', 'c'], dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,43 +307,6 @@
    ],
    "source": [
     "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 203
-    },
-    "executionInfo": {
-     "elapsed": 1288,
-     "status": "ok",
-     "timestamp": 1718431672117,
-     "user": {
-      "displayName": "毛利拓也",
-      "userId": "17854120745961292401"
-     },
-     "user_tz": -540
-    },
-    "id": "odsPTOTWglDQ",
-    "outputId": "293460a4-42ca-4722-a2d4-4df3f9cc0793"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.frame.DataFrame"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(df)"
    ]
   },
   {
@@ -377,7 +397,7 @@
     }
    ],
    "source": [
-    "# 辞書型から作成\n",
+    "# dictionary型から作成\n",
     "df = pd.DataFrame(\n",
     "    data={\n",
     "        'A': [0, 4, 8],\n",
