--- a/notebook/1_2_pandas.ipynb
+++ b/notebook/1_2_pandas.ipynb
@@ -128,14 +128,14 @@
    ],
    "source": [
     "# list型から作成\n",
-    "data = [\n",
+    "data_list = [\n",
     "    [0, 1, 2, 3],\n",
     "    [4, 5, 6, 7],\n",
     "    [8, 9, 10, 11]\n",
     "]\n",
     "\n",
     "df = pd.DataFrame(\n",
-    "    data,\n",
+    "    data_list,\n",
     "    columns=['A', 'B', 'C', 'D'],\n",
     "    index=['a', 'b', 'c']\n",
     ")\n",
@@ -160,7 +160,7 @@
     }
    ],
    "source": [
-    "type(data)"
+    "type(data_list)"
    ]
   },
   {
@@ -397,13 +397,15 @@
    ],
    "source": [
     "# dictionary型から作成\n",
+    "data_dict={\n",
+    "    'A': [0, 4, 8],\n",
+    "    'B': [1, 5, 9],\n",
+    "    'C': [2, 6, 10],\n",
+    "    'D': [3, 7, 11]\n",
+    "}\n",
+    "\n",
     "df = pd.DataFrame(\n",
-    "    data={\n",
-    "        'A': [0, 4, 8],\n",
-    "        'B': [1, 5, 9],\n",
-    "        'C': [2, 6, 10],\n",
-    "        'D': [3, 7, 11]\n",
-    "    },\n",
+    "    data_dict,\n",
     "    index=['a', 'b', 'c']\n",
     ")\n",
     "\n",
