--- a/notebook/1_3_numpy.ipynb
+++ b/notebook/1_3_numpy.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 8,
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -68,27 +68,27 @@
        "       [ 8,  9, 10, 11]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# list型から作成\n",
-    "data = [\n",
+    "data_list = [\n",
     "    [0, 1, 2, 3],\n",
     "    [4, 5, 6, 7],\n",
     "    [8, 9, 10, 11]\n",
     "]\n",
     "\n",
-    "arr = np.array(data)\n",
+    "arr = np.array(data_list)\n",
     "\n",
     "arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -110,43 +110,21 @@
     {
      "data": {
       "text/plain": [
-       "list"
+       "numpy.ndarray"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(data)"
+    "type(arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0,  1,  2,  3],\n",
-       "       [ 4,  5,  6,  7],\n",
-       "       [ 8,  9, 10, 11]])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -171,7 +149,7 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -209,7 +187,7 @@
        "       [ 8,  9, 10, 11]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -247,7 +225,7 @@
        "(3, 4)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -283,7 +261,7 @@
        "2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "id": "LPaMvemVipRs"
    },
@@ -366,7 +344,7 @@
        "c  8  9  10  11"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +374,7 @@
        "       [ 8,  9, 10, 11]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +406,7 @@
        "       [ 8,  9, 10, 11]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -464,7 +442,7 @@
        "array([0, 1, 2, 3])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -500,7 +478,7 @@
        "1"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -511,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -536,7 +514,7 @@
        "1"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +554,7 @@
        "       [ 8,  9, 10, 11]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -612,7 +590,7 @@
        "(3, 4)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -648,7 +626,7 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -688,7 +666,7 @@
        "        True,  True,  True])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -725,7 +703,7 @@
        "array([ 4,  5,  6,  7,  8,  9, 10, 11])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -762,7 +740,7 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -798,7 +776,7 @@
        "(12,)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -845,7 +823,7 @@
        "       [11]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +864,7 @@
        "       5.2, 5.3, 5.4, 5.5, 5.6, 5.7, 5.8, 5.9])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +897,7 @@
        "       -0.70554033, -0.63126664, -0.55068554, -0.46460218, -0.37387666])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
